<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleMyTasks"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/my_tasks"
        android:textAppearance="@style/LargeTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCompleted"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/completed"
        android:textColor="@color/separator"
        android:textAppearance="@style/SubheadText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMyTasks" />

    <TextView
        android:id="@+id/textShow"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/show"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMyTasks"
        android:textAppearance="@style/Body"/>

</androidx.constraintlayout.widget.ConstraintLayout>