<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleMyTasks"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/my_tasks"
        android:textAppearance="@style/LargeTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCompleted"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/completed"
        android:textColor="@color/separator"
        android:textAppearance="@style/SubheadText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMyTasks" />

    <ImageButton
        android:id="@+id/textShow"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/light_back"
        android:src="@drawable/to_show_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMyTasks"
        app:tint="@color/blue"
        android:contentDescription="@string/show"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F6F5F4"
        app:cardCornerRadius="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintTop_toBottomOf="@+id/textCompleted">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="55dp"
            android:paddingBottom="?attr/actionBarSize"
            />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:tint="@color/white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        android:contentDescription="addTaskButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>