<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_back"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/close"
        android:contentDescription="Cancel Button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@android:color/transparent"
        android:outlineProvider="none"
        android:tint="@color/black"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/textSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@android:color/transparent"
        android:text="@string/save"
        android:textAllCaps="true"
        android:paddingEnd="0dp"
        android:paddingStart="0dp"
        android:textColor="@color/blue"/>

    <EditText
        android:id="@+id/editTask"
        android:layout_width="match_parent"
        android:minHeight="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hind_text_edit_task"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        app:layout_constraintTop_toBottomOf="@+id/closeButton"
        android:background="@drawable/edit_task_back"
        android:padding="16dp"
        android:elevation="6dp"/>

    <TextView
        android:id="@+id/importance"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/importance"
        android:textAppearance="@style/Body"
        app:layout_constraintTop_toBottomOf="@+id/editTask"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingStart="0dp"
        android:text="@string/importance"
        android:textAllCaps="true"
        android:textAppearance="@style/Body"
        app:layout_constraintTop_toBottomOf="@+id/importance"
        tools:ignore="MissingConstraints"
        />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@+id/spinner"/>

    <TextView
        android:id="@+id/textDoBefore"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="Сделать до"
        android:textAppearance="@style/Body"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCompat"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/textDoBefore"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:theme="@style/BrandedSwitch.control"
        />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textDoBefore"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="@color/blue"
        android:textAppearance="@style/SubheadText"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@+id/textDate"/>

    <ImageButton
        android:id="@+id/textShow"
        android:layout_width="16dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/light_back"
        android:src="@drawable/delete_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:tint="@color/red"
        android:contentDescription="Delete task"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textDelete"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical|end"
        android:text="Удалить"
        android:textAppearance="@style/Body"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/textShow"
        android:textColor="@color/red" />

</androidx.constraintlayout.widget.ConstraintLayout>
